--- a/pokemon_GAN.ipynb
+++ b/pokemon_GAN.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,10 +120,8 @@
     "    with tf.variable_scope('gen') as scope:\n",
     "        if reuse:\n",
     "            scope.reuse_variables()\n",
-    "        w1 = tf.get_variable('w1', shape=[random_dim, s4 * s4 * c4], dtype=tf.float32,\n",
-    "                         initializer=tf.truncated_normal_initializer(stddev=0.02))\n",
-    "        b1 = tf.get_variable('b1', shape=[c4 * s4 * s4], dtype=tf.float32,\n",
-    "                             initializer=tf.constant_initializer(0.0))\n",
+    "        w1 = tf.get_variable('w1', shape=[random_dim, s4 * s4 * c4], dtype=tf.float32,initializer=tf.truncated_normal_initializer(stddev=0.02))\n",
+    "        b1 = tf.get_variable('b1', shape=[c4 * s4 * s4], dtype=tf.float32,initializer=tf.constant_initializer(0.0))\n",
     "        flat_conv1 = tf.add(tf.matmul(input, w1), b1, name='flat_conv1')\n",
     "        #Convolution, bias, activation, repeat! \n",
     "        conv1 = tf.reshape(flat_conv1, shape=[-1, s4, s4, c4], name='conv1')           \n",
@@ -131,33 +129,24 @@
     "        act1 = tf.nn.relu(bn1, name='act1')\n",
     "        # 8*8*256\n",
     "        #Convolution, bias, activation, repeat!\n",
-    "        conv2 = tf.layers.conv2d_transpose(act1, c8, kernal_size = [5,5], strides = [2,2], padding = \"SAME\", \n",
-    "                                              kernal_initializer = tf.truncated_normal_initializer(stddev = 0.02), name = 'conv2')            \n",
+    "        conv2 = tf.layers.conv2d_transpose(act1, c8, kernal_size = [5,5], strides = [2,2], padding = \"SAME\", kernal_initializer = tf.truncated_normal_initializer(stddev = 0.02), name = 'conv2')            \n",
     "        bn2 = tf.contrib.layers.batch_norm(conv2, is_training=is_train, epsilon=1e-5, decay = 0.9,  updates_collections=None, scope='bn2')\n",
     "        act2 = tf.nn.relu(bn2, name='act2')\n",
     "        # 16*16*128\n",
-    "        conv3 = tf.layers.conv2d_transpose(act2, c16, kernel_size=[5, 5], strides=[2, 2], padding=\"SAME\",\n",
-    "                                           kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),\n",
-    "                                           name='conv3')\n",
+    "        conv3 = tf.layers.conv2d_transpose(act2, c16, kernel_size=[5, 5], strides=[2, 2], padding=\"SAME\",kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),name='conv3')\n",
     "        bn3 = tf.contrib.layers.batch_norm(conv3, is_training=is_train, epsilon=1e-5, decay = 0.9,  updates_collections=None, scope='bn3')\n",
     "        act3 = tf.nn.relu(bn3, name='act3')\n",
     "        # 32*32*64\n",
-    "        conv4 = tf.layers.conv2d_transpose(act3, c32, kernel_size=[5, 5], strides=[2, 2], padding=\"SAME\",\n",
-    "                                           kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),\n",
-    "                                           name='conv4')\n",
+    "        conv4 = tf.layers.conv2d_transpose(act3, c32, kernel_size=[5, 5], strides=[2, 2], padding=\"SAME\",kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),name='conv4')\n",
     "        bn4 = tf.contrib.layers.batch_norm(conv4, is_training=is_train, epsilon=1e-5, decay = 0.9,  updates_collections=None, scope='bn4')\n",
     "        act4 = tf.nn.relu(bn4, name='act4')\n",
     "        # 64*64*32\n",
-    "        conv5 = tf.layers.conv2d_transpose(act4, c64, kernel_size=[5, 5], strides=[2, 2], padding=\"SAME\",\n",
-    "                                           kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),\n",
-    "                                           name='conv5')\n",
+    "        conv5 = tf.layers.conv2d_transpose(act4, c64, kernel_size=[5, 5], strides=[2, 2], padding=\"SAME\",kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),name='conv5')\n",
     "        bn5 = tf.contrib.layers.batch_norm(conv5, is_training=is_train, epsilon=1e-5, decay = 0.9,  updates_collections=None, scope='bn5')\n",
     "        act5 = tf.nn.relu(bn5, name='act5')\n",
     "        \n",
     "        #128*128*3\n",
-    "        conv6 = tf.layers.conv2d_transpose(act5, output_dim, kernel_size=[5, 5], strides=[2, 2], padding=\"SAME\",\n",
-    "                                           kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),\n",
-    "                                           name='conv6')\n",
+    "        conv6 = tf.layers.conv2d_transpose(act5, output_dim, kernel_size=[5, 5], strides=[2, 2], padding=\"SAME\",kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),name='conv6')\n",
     "        # bn6 = tf.contrib.layers.batch_norm(conv6, is_training=is_train, epsilon=1e-5, decay = 0.9,  updates_collections=None, scope='bn6')\n",
     "        act6 = tf.nn.tanh(conv6, name='act6')\n",
     "        return act6"
