--- a/pokemon_GAN.ipynb
+++ b/pokemon_GAN.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,8 @@
     "    image = tf.cast(image, tf.float32)\n",
     "    image = image / 255.0\n",
     "    \n",
-    "    iamges_batch = tf.train.shuffle_batch([image], batch_size = BATCH_SIZE,num_threads = 4, capacity = 200 + 3* BATCH_SIZE, min_after_dequeue = 200)\n",
+    "    iamges_batch = tf.train.shuffle_batch([image], batch_size = BATCH_SIZE,num_threads = 4,\n",
+    "                                          capacity = 200 + 3* BATCH_SIZE, min_after_dequeue = 200)\n",
     "    num_images = len(images)\n",
     "\n",
     "    return iamges_batch, num_images\n",
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,25 +130,34 @@
     "        act1 = tf.nn.relu(bn1, name='act1')\n",
     "        # 8*8*256\n",
     "        #Convolution, bias, activation, repeat!\n",
-    "        conv2 = tf.layers.conv2d_transpose(act1, c8, kernal_size = [5,5], strides = [2,2], padding = \"SAME\", kernal_initializer = tf.truncated_normal_initializer(stddev = 0.02), name = 'conv2')            \n",
-    "        bn2 = tf.contrib.layers.batch_norm(conv2, is_training=is_train, epsilon=1e-5, decay = 0.9,  updates_collections=None, scope='bn2')\n",
+    "        conv2 = tf.layers.conv2d_transpose(act1, c8, kernal_size = [5,5], strides = [2,2],\n",
+    "                                           padding = \"SAME\", kernal_initializer = tf.truncated_normal_initializer(stddev = 0.02), name = 'conv2')            \n",
+    "        bn2 = tf.contrib.layers.batch_norm(conv2, is_training=is_train, epsilon=1e-5,\n",
+    "                                           decay = 0.9,  updates_collections=None, scope='bn2')\n",
     "        act2 = tf.nn.relu(bn2, name='act2')\n",
     "        # 16*16*128\n",
-    "        conv3 = tf.layers.conv2d_transpose(act2, c16, kernel_size=[5, 5], strides=[2, 2], padding=\"SAME\",kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),name='conv3')\n",
-    "        bn3 = tf.contrib.layers.batch_norm(conv3, is_training=is_train, epsilon=1e-5, decay = 0.9,  updates_collections=None, scope='bn3')\n",
+    "        conv3 = tf.layers.conv2d_transpose(act2, c16, kernel_size=[5, 5], strides=[2, 2],\n",
+    "                                           padding=\"SAME\",kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),name='conv3')\n",
+    "        bn3 = tf.contrib.layers.batch_norm(conv3, is_training=is_train, epsilon=1e-5,\n",
+    "                                           decay = 0.9,  updates_collections=None, scope='bn3')\n",
     "        act3 = tf.nn.relu(bn3, name='act3')\n",
     "        # 32*32*64\n",
-    "        conv4 = tf.layers.conv2d_transpose(act3, c32, kernel_size=[5, 5], strides=[2, 2], padding=\"SAME\",kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),name='conv4')\n",
-    "        bn4 = tf.contrib.layers.batch_norm(conv4, is_training=is_train, epsilon=1e-5, decay = 0.9,  updates_collections=None, scope='bn4')\n",
+    "        conv4 = tf.layers.conv2d_transpose(act3, c32, kernel_size=[5, 5], strides=[2, 2],\n",
+    "                                           padding=\"SAME\",kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),name='conv4')\n",
+    "        bn4 = tf.contrib.layers.batch_norm(conv4, is_training=is_train, epsilon=1e-5,\n",
+    "                                           decay = 0.9,  updates_collections=None, scope='bn4')\n",
     "        act4 = tf.nn.relu(bn4, name='act4')\n",
     "        # 64*64*32\n",
-    "        conv5 = tf.layers.conv2d_transpose(act4, c64, kernel_size=[5, 5], strides=[2, 2], padding=\"SAME\",kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),name='conv5')\n",
-    "        bn5 = tf.contrib.layers.batch_norm(conv5, is_training=is_train, epsilon=1e-5, decay = 0.9,  updates_collections=None, scope='bn5')\n",
+    "        conv5 = tf.layers.conv2d_transpose(act4, c64, kernel_size=[5, 5], strides=[2, 2],\n",
+    "                                           padding=\"SAME\",kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),name='conv5')\n",
+    "        bn5 = tf.contrib.layers.batch_norm(conv5, is_training=is_train, epsilon=1e-5,\n",
+    "                                           decay = 0.9,  updates_collections=None, scope='bn5')\n",
     "        act5 = tf.nn.relu(bn5, name='act5')\n",
     "        \n",
     "        #128*128*3\n",
-    "        conv6 = tf.layers.conv2d_transpose(act5, output_dim, kernel_size=[5, 5], strides=[2, 2], padding=\"SAME\",kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),name='conv6')\n",
-    "        # bn6 = tf.contrib.layers.batch_norm(conv6, is_training=is_train, epsilon=1e-5, decay = 0.9,  updates_collections=None, scope='bn6')\n",
+    "        conv6 = tf.layers.conv2d_transpose(act5, output_dim, kernel_size=[5, 5], strides=[2, 2],\n",
+    "                                           padding=\"SAME\",kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),name='conv6')\n",
+    "        # bn6 = tf.contrib.layers.batch_norm(conv6, is_training=is_train, epsilon=1e-5,decay = 0.9,  updates_collections=None, scope='bn6')\n",
     "        act6 = tf.nn.tanh(conv6, name='act6')\n",
     "        return act6"
    ]
