addition of discriminator

--- a/pokemon_GAN.ipynb
+++ b/pokemon_GAN.ipynb
@@ -124,12 +124,12 @@
     "        w1 = tf.get_variable('w1', shape=[random_dim, s4 * s4 * c4], dtype=tf.float32,initializer=tf.truncated_normal_initializer(stddev=0.02))\n",
     "        b1 = tf.get_variable('b1', shape=[c4 * s4 * s4], dtype=tf.float32,initializer=tf.constant_initializer(0.0))\n",
     "        flat_conv1 = tf.add(tf.matmul(input, w1), b1, name='flat_conv1')\n",
-    "        #Convolution, bias, activation, repeat! \n",
+    "        #Convolution, bias, activation\n",
     "        conv1 = tf.reshape(flat_conv1, shape=[-1, s4, s4, c4], name='conv1')           \n",
     "        bn1 = tf.contrib.layers.batch_norm(conv1, is_training=is_train, epsilon=1e-5, decay = 0.9,  updates_collections=None, scope='bn1')\n",
     "        act1 = tf.nn.relu(bn1, name='act1')\n",
     "        # 8*8*256\n",
-    "        #Convolution, bias, activation, repeat!\n",
+    "        #Convolution, bias, activation\n",
     "        conv2 = tf.layers.conv2d_transpose(act1, c8, kernal_size = [5,5], strides = [2,2],\n",
     "                                           padding = \"SAME\", kernal_initializer = tf.truncated_normal_initializer(stddev = 0.02), name = 'conv2')            \n",
     "        bn2 = tf.contrib.layers.batch_norm(conv2, is_training=is_train, epsilon=1e-5,\n",
@@ -160,6 +160,64 @@
     "        # bn6 = tf.contrib.layers.batch_norm(conv6, is_training=is_train, epsilon=1e-5,decay = 0.9,  updates_collections=None, scope='bn6')\n",
     "        act6 = tf.nn.tanh(conv6, name='act6')\n",
     "        return act6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Discriminator\n",
+    "def discriminator(input, is_train, refuse = False):\n",
+    "    \n",
+    "    # Channel num: 64,128,256,512\n",
+    "    c2, c4, c8, c16 = 64, 128, 256, 512\n",
+    "    with tf.variable_scope('dis') as scope:\n",
+    "        if reuse:\n",
+    "            scope.reuse_variables()\n",
+    "        #Convolution, activation, bias\n",
+    "        conv1 = tf.layers.conv2d(input, c2, kernel_size=[5, 5], strides=[2, 2], padding=\"SAME\",\n",
+    "                                kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),\n",
+    "                                name='conv1')\n",
+    "        bn1 = tf.contrib.layers.batch_norm(conv1, is_training = is_train, epsilon=1e-5, decay = 0.9,  updates_collections=None, scope = 'bn1')\n",
+    "        act1 = lrelu(conv1, n='act1')\n",
+    "         #Convolution, activation, bias \n",
+    "        conv2 = tf.layers.conv2d(act1, c4, kernel_size=[5, 5], strides=[2, 2], padding=\"SAME\",\n",
+    "                                 kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),\n",
+    "                                 name='conv2')\n",
+    "        bn2 = tf.contrib.layers.batch_norm(conv2, is_training=is_train, epsilon=1e-5, decay = 0.9,  updates_collections=None, scope='bn2')\n",
+    "        act2 = lrelu(bn2, n='act2')\n",
+    "        #Convolution, activation, bias \n",
+    "        conv3 = tf.layers.conv2d(act2, c8, kernel_size=[5, 5], strides=[2, 2], padding=\"SAME\",\n",
+    "                                 kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),\n",
+    "                                 name='conv3')\n",
+    "        bn3 = tf.contrib.layers.batch_norm(conv3, is_training=is_train, epsilon=1e-5, decay = 0.9,  updates_collections=None, scope='bn3')\n",
+    "        act3 = lrelu(bn3, n='act3')\n",
+    "         #Convolution, activation, bias, repeat! \n",
+    "        conv4 = tf.layers.conv2d(act3, c16, kernel_size=[5, 5], strides=[2, 2], padding=\"SAME\",\n",
+    "                                 kernel_initializer=tf.truncated_normal_initializer(stddev=0.02),\n",
+    "                                 name='conv4')\n",
+    "        bn4 = tf.contrib.layers.batch_norm(conv4, is_training=is_train, epsilon=1e-5, decay = 0.9,  updates_collections=None, scope='bn4')\n",
+    "        act4 = lrelu(bn4, n='act4')\n",
+    "       \n",
+    "        # start from act4\n",
+    "        dim = int(np.prod(act4.get_shape()[1:]))\n",
+    "        fc1 = tf.reshape(act4, shape=[-1, dim], name='fc1')\n",
+    "      \n",
+    "        \n",
+    "        w2 = tf.get_variable('w2', shape=[fc1.shape[-1], 1], dtype=tf.float32,\n",
+    "                             initializer=tf.truncated_normal_initializer(stddev=0.02))\n",
+    "        b2 = tf.get_variable('b2', shape=[1], dtype=tf.float32,\n",
+    "                             initializer=tf.constant_initializer(0.0))\n",
+    "\n",
+    "        # wgan just get rid of the sigmoid\n",
+    "        logits = tf.add(tf.matmul(fc1, w2), b2, name='logits')\n",
+    "        # dcgan\n",
+    "        acted_out = tf.nn.sigmoid(logits)\n",
+    "        return logits #, acted_out\n",
+    "\n",
+    "            "
    ]
   },
   {
